<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="txt_copy">复制文本内容</string>
    <string name="app_name">云台法律咨询</string>
    <string name="loading">正在加载…</string>
    <string name="fine_no_data">暂无数据</string>
    <string name="login_hint1">请输入手机号码</string>
    <string name="resend_code_tips">重新获取(%1$s)</string>
    <string name="title_dialog">云台法律咨询提示</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="onError">网络开小差了，请重试</string>
    <string name="onTimeout2">网络开小差了，请重试</string>
    <string name="click_me_to_retry">加载失败，点击屏幕重试</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="msg_recall_by_user">This message has been recalled by %1$s</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="hint_please_input">请输入消息内容</string>
    <string name="txt_certified_lawyer">认证律师</string>
    <string name="txt_my_inquiry">我的咨询</string>
    <string name="txt_my_contract">我的合同</string>
    <string name="txt_wallet">钱包</string>
    <string name="txt_lawyer_information">律师须知</string>
    <string name="txt_question_answer">问题抢答</string>
    <string name="txt_mine">我的</string>
    <string name="txt_balance_account">余额账户（元）</string>
    <string name="txt_change_details">零钱明细</string>
    <string name="txt_alipay">支付宝</string>
    <string name="txt_mine_wallet">我的钱包</string>
    <string name="txt_withdraw">提现</string>
    <string name="txt_top_up">充值</string>
    <string name="txt_alipay_bind">支付宝绑定</string>
    <string name="txt_tip_bind_ali">请绑定本人已实名认证的支付宝账号</string>
    <string name="txt_name">姓名</string>
    <string name="txt_account">账号</string>
    <string name="hint_input_name">请输入本人姓名</string>
    <string name="hint_input_ali_account">输入支付宝账号</string>
    <string name="txt_next">下一步</string>
    <string name="txt_bind_tips_title">温馨提示</string>
    <string name="txt_bind_tips_content">为了资金安全，请绑定和本人姓名一致、且已实名认证过的支付宝账号，如因个人原因造成的打款延迟或失败，请自行承担。</string>
    <string name="txt_unbind">解除绑定</string>
    <string name="txt_account_echo">(%s)</string>
    <string name="txt_account_echo_with_alipay">支付宝(%s)</string>
    <string name="txt_tip_unbind_alipay">您还未绑定支付宝账号,请先绑定支付宝账号之后在进行提现操作</string>
    <string name="txt_withdraw_type">提现类型</string>
    <string name="txt_withdrawal_amount">提现金额</string>
    <string name="hint_withdraw_money_mini">单次提现不低于100元</string>
    <string name="toast_please_input_money">请输入提现金额</string>
    <string name="toast_input_money_too_much">输入金额大于最大可提现金额</string>
    <string name="money_symbol">¥</string>
    <string name="txt_all_withdraw">全部提现</string>
    <string name="txt_withdraw_success">提现成功,等待系统审核</string>
    <string name="txt_withdraw_insufficient_balance">账户余额不足,最少提现额度需要大于100元</string>
    <string name="hint_input_send_message">请输入消息内容</string>
    <string name="txt_change_a_batch">换一批</string>
    <string name="txt_look_look_how_to_play">看看别人怎么写</string>
    <string name="txt_send_message">发送</string>
    <string name="txt_common_terms">常用语</string>

    <string name="hint_input_search_word">请输入律师姓名或关键词</string>

    <string name="txt_areas_of_expertise">擅长领域</string>
    <string name="txt_search_history">搜索历史</string>
    <string name="txt_clean_histort">清除搜索历史</string>
    <string name="txt_send_red_package">发红包</string>
    <string name="txt_money">金额</string>
    <string name="hint_input_money">请填写金额</string>
    <string name="txt_cram_money_into_red_envelopes">塞钱进红包</string>
    <string name="txt_input_top_up_money">请输入充值金额</string>

    <string name="home_consulting">咨询</string>
    <string name="home_complaint">起诉状</string>
    <string name="home_courtassistant">开庭助手</string>
    <string name="home_legaladviser">法律顾问</string>
    <string name="home_recommended_lawyer">推荐律师</string>
    <string name="txt_balance">余额</string>
    <string name="txt_my_comment">我的评价</string>
    <string name="txt_my_complaint">我的起诉状</string>
    <string name="txt_lawyer_certification">律师认证</string>
    <string name="txt_announcement">公告</string>
    <string name="textview_pay_now">立即支付</string>
    <string name="textview_communicate_now">立即沟通</string>
    <string name="textview_sticky_consultation">置顶咨询</string>
    <string name="textview_additional_reward">追加悬赏</string>

    <string name="txt_get_success">领取成功</string>

    <string name="textview_i_want_a_reward">我要悬赏</string>
    <string name="textview_problem_solved">问题已解决？</string>
    <string name="txt_choose_pay">选择支付方式</string>
    <string name="txt_pay_by_wechat">微信支付</string>
    <string name="txt_pay_by_ali">支付宝支付</string>
    <string name="txt_pay_by_balance">余额支付</string>
    <string name="txt_pay_commit">确认支付</string>
    <string name="txt_my_balance">我的余额</string>
    <string name="txt_what_is_answer">什么是问题抢答？</string>
    <string name="txt_auto_answer">自动回复短语</string>
    <string name="hint_input_auto_answer">请输入自动回复短语</string>
    <string name="txt_select_all">全选</string>


    <string name="textview_unlock_now">立即获取</string>
    <string name="textview_communicate_immediately">立即沟通</string>
    <string name="textview_i_want_to_answer">我要回答</string>
    <string name="textview_write_an_answer">写回答…</string>
    <string name="text_mine_common_words">我的常用语</string>
    <string name="text_error">应用程序内部出现问题，请稍后再试</string>
    <string name="txt_my_refund">我的退款</string>
    <string name="txt_refund_amount">退款金额</string>
    <string name="textview_skills">使用技巧</string>

    <string name="txt_his_complaint">他的起诉状</string>
    <string name="txt_plaintiff">原告：</string>
    <string name="gender">性别：</string>
    <string name="txt_defendant">被告：</string>
    <string name="txt_request_things">请求事项:</string>

    <string name="text_legal_knowledge">法律知识</string>
    <string name="txt_home">首页</string>
    <string name="txt_message">消息</string>
    <string name="txt_adviser">顾问</string>


</resources>
