<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent_half"
    android:orientation="vertical">

    <com.ytfu.yuntaifawu.utils.view.RatioViewGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:rvg_ratio="3">

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher_background" />
    </com.ytfu.yuntaifawu.utils.view.RatioViewGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_home_consultation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/zixun_top"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/home_consulting"
            android:textColor="@color/textColor_33"
            android:textSize="11sp" />
        <TextView
            android:id="@+id/id_tv_home_legal_counsel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/home_icon_guwen"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/home_legaladviser"
            android:textColor="@color/textColor_33"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_home_open_court_assistant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_icon_zhushou"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/home_courtassistant"
            android:textColor="@color/textColor_33"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_home_knowledge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/home_icon_zhishi"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/text_legal_knowledge"
            android:textColor="@color/textColor_33"
            android:textSize="11sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/yuanjiaozx"
        android:drawablePadding="5dp"
        android:text="@string/home_recommended_lawyer"
        android:textColor="@color/textColor_37"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/transparent_f2" />
</LinearLayout>