<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ytfu.yuntaifawu.ui.topup.act.TopUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_money"
            android:textColor="#ff3e3e3e"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_top_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/txt_input_top_up_money"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="#ff797979"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_top_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/selector_topup_commit"
        android:enabled="false"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/txt_next"
        android:textColor="#ffffffff"
        android:textSize="14sp" />
</LinearLayout>