<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_reward"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@color/transparent_half"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_top_now"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_top_consultation_shape"
            android:gravity="center"
            android:text="@string/textview_sticky_consultation"
            android:textColor="#4C98EE"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_add_a_reward"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_add_shape"
            android:gravity="center"
            android:text="@string/textview_additional_reward"
            android:textColor="@color/transparent_half"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_unrewarded"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/transparent_half"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_unrewarded_top_now"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_top_consultation_shape"
            android:gravity="center"
            android:text="@string/textview_sticky_consultation"
            android:textColor="#4C98EE"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_unrewarded_i_want_a_reward"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_add_shape"
            android:gravity="center"
            android:text="@string/textview_i_want_a_reward"
            android:textColor="@color/transparent_half"
            android:textSize="13sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_lawyer_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:background="@color/transparent_half"
        android:gravity="center"
       android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_communicate_now"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_add_shape"
            android:gravity="center"
            android:text="@string/textview_communicate_immediately"
            android:textColor="@color/transparent_half"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_i_want_to_answer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/textview_add_shape"
            android:gravity="center"
            android:text="@string/textview_i_want_to_answer"
            android:visibility="gone"
            android:textColor="@color/transparent_half"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>